# cmemcache-yelp

./: README  TODO  VERSION  _cmemcache.c  cmemcache.py  testReconnect.py
cmemcache-0.94-orig/: INSTALL  MANIFEST.in  Makefile  README  _cmemcache.c  cachecmp.py  cmemcache.py  index.html  setup.cfg  setup.py  style.css  test.py
cmemcache-0.94-orig/etc/: precommit
libmemcache-1.4.0.rc2/: COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
libmemcache-1.4.0.rc2/doc/: Makefile.in
libmemcache-1.4.0.rc2/src/: Makefile.am  Makefile.in  buffer.c  crc32_table.h  memcache.c
libmemcache-1.4.0.rc2/test/: Makefile.am  Makefile.in
libmemcache-1.4.0.rc2/test/benchmark/: Makefile.am  Makefile.in  benchmark.c
libmemcache-1.4.0.rc2/test/buffer_recycle/: Makefile.am  Makefile.in  buffer_recycle.c
libmemcache-1.4.0.rc2/test/long_val/: Makefile.am  Makefile.in  long_val.c
libmemcache-1.4.0.rc2/test/redundant_server/: Makefile.am  Makefile.in  redundant_server.c
libmemcache-1.4.0.rc2/test/regress/: Makefile.am  Makefile.in  regress.c
libmemcache-1.4.0.rc2/test/unit/: Makefile.am  Makefile.in  check_buffer.c
